style.css
body {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-weight: 500;
    margin: 0;
    overflow: scroll;
}

.container {
    display: grid;
    grid-template-columns: 1fr 6fr;
    grid-template-rows: auto 1fr;
    height: 100vh;
    overflow: hidden;
}

.header {
    grid-column-start: 2;
    display: grid;
    grid-template-columns: 2fr 1fr;
    align-items: center;
    padding: 10px 60px 20px 60px;
}

.search, .user {
    margin-bottom: 30px;
}

.search {
    grid-column: 1;
    display: flex;
    align-items: center;
}

.magnify, 
.bell {
    width: 25px;
    height: 25px;
}

.magnify:hover,
.bell:hover {
    transform: scale(1.1);
    cursor: pointer;
}

.field {
    outline: none;
    border: none;
    border-radius: 16px;
    background-color: #e5e7eb;
    width: 600px;
    height: 28px;
    padding-left: 15px;
    margin-left: 10px;
}

.user {
    grid-column: 2;
    display: flex;
    align-items: center;
    justify-self: right;
    gap: 30px;
    font-size: 12px;
}

.profile-pic {
    border-radius: 40%;
    width: 50px;
}

.profile-pic:hover {
    transform: scale(1.05);
    cursor: pointer;
}

.welcome {
    display: flex;
    align-items: center;
    gap: 20px;
}

.welcome-pic {
    border-radius: 50%;
    width: 60px;
}

.message {
    font-size: 16px;
}

.message > p, h3 {
    margin: 0;
}

.nav > ul {
    display: flex;
    list-style-type: none;
    justify-content: end;
    gap: 50px;
}

.nav li {
    color: white;
    font-weight: 700;
    background-color: #475569;
    width: 90px;
    height: 40px;
    border-radius: 20px;
    text-align: center;
    align-content: center;
}

.nav li:hover {
    background-color: #0ea5e9;
    transform: scale(1.05);
    cursor: pointer;
}

.dashboard {
    grid-column: 1;
    grid-row:  1 / span 2;
    background-color: #475569;
    color: white;
}

.dashboard > div {
    margin-left: 10px;
}

.dashboard > div a, li {
    text-decoration: none;
    list-style: none;
    color: white;
}

.dashboard li:hover {
    transform: scale(1.05);
    background-color: #334155;
    border-radius: 8px;
    width: 160px;
}

.dashboard .icon {
    width: 25px;
    fill: white;
    margin: 0;
}

.upper {
    display: flex;
    align-items: center;
    margin-top: 10px;
    gap: 10px;
}

.upper .logo {
    grid-column: 1;
    width: 50px;
    fill: white;
}

.dashboard ul {
    display: grid;
    padding: 0;
    row-gap: 15px;
}

.dashboard li {
    display: flex;
    align-items: center;
    gap: 20px;
}

.mid {
    grid-row: 2;
    margin-top: 20px;
    padding-left: 14px;
}

.bottom {
    grid-row: 3;
    gap: 5px;
    align-items: center;
    row-gap: 30px;
    margin-top: 80px;
    padding-left: 14px;
    padding-bottom: 100vh;
}

.content {
    grid-column: 2;
    display: grid;
    grid-template-columns: 2fr 1fr;
    background-color: #e2e8f0;
    box-shadow: inset 0 4px 14px -8px #020617;
}

.main {
    grid-column: 1;
    grid-row: 1;
    margin: 15px;
}

.title {
    grid-row: 1;
    margin-top: 10px;
    margin-left: 20px;
}

.grid {
    grid-row: 2;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
    column-gap: 1px;
    gap: 20px;
    margin-top: 10px;
    margin-left: 20px;
}

.grid .project {
    background-color: white;
    border-left: 8px solid;
    border-color: #0ea5e9;
    width: 450px;
    height: 200px;
    border-radius: 10px;
    padding: 10px;
}

.grid .project:hover {
    background-color: #cbd5e1;
    cursor: pointer;
}

.project {
    display: flex;
    flex-wrap: wrap;
}

.project-icons {
    display: flex;
    margin: auto;
    justify-content: end;
}

.project-icons * {
    width: 6%;
    margin: 5px;
}

.project-icons *:hover {
    fill: #475569;
}

.side {
    display: flex;
    flex-direction: column;
    margin-top: 15px;
}

.side h3 {
    margin-top: 10px;
}

.announcement {
    margin-top: 10px;
    margin-bottom: 40px;
    background-color: white;
    border-radius: 12px;
    height: 360px;
    width: 300px;
}

.announcement div {
    width: 200px;
    margin: auto;
    border-bottom: 1px solid black;
}

.announcement .information {
    font-size: 11px;
    color: #475569;
}

.announcement .heading {
    font-weight: 300px;
}

.trending {
    justify-content: flex-end;
    background-color: white;
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 260px;
    width: 300px;
    border-radius: 12px;
    margin-top: 10px;
    gap: 10px;
}

.trending-pic {
    width: 50px;
    border-radius: 50%;
}

.trending-user {
    display: flex;
    padding: 0 50px 0 50px;
    gap: 10px;
}

.trending-project {
    display: flex;
    flex-direction: column;
    justify-content: center;
    line-height: 5px;
}

.project-name {
    font-size: 12px;
}

